@@ -70,7 +70,9 @@ It has subdirectories:
     library.  Support for "make check" and "make check-install" is
     complete, and runs through all the subdirectories here when this
     command is issued from the build directory.  Please note that
-    "make check" requires DejaGNU 1.4 or later to be installed.
+    "make check" requires DejaGnu 1.4 or later to be installed,
+    or for extra <a class="link" href="test.html#test.run.permutations" title="Permutations">permutations</a>
+    DejaGnu 1.5.3 or later.
     </dd></dl></div><p>
 Other subdirectories contain variant versions of certain files
 that are meant to be copied or linked by the configure script.
