@@ -358,7 +358,9 @@ It has subdirectories:
     library.  Support for "make check" and "make check-install" is
     complete, and runs through all the subdirectories here when this
     command is issued from the build directory.  Please note that
-    "make check" requires DejaGNU 1.4 or later to be installed.
+    "make check" requires DejaGnu 1.4 or later to be installed,
+    or for extra <link linkend="test.run.permutations">permutations</link>
+    DejaGnu 1.5.3 or later.
     </listitem>
   </varlistentry>
 </variablelist>
